update git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ TestNG-Practice/test-output/
 TestNG-Practice/.classpath
 TestNG-Practice/.project
 ExtentReport-Framework-Example/src/main/java/com/test/App.java
+/project add in git repo/TMB-SeleniumAutomationFramework
