--- a/ExtentReport-Example/.gitignore
+++ b/ExtentReport-Example/.gitignore
@@ -3,4 +3,4 @@
 ExtentReport-Example/.classpath
 ExtentReport-Example/.project
 ExtentReport-Example/.settings/
-ExtentReport-Example/.test-output/
+.test-output/
